Fix: NavBar text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,12 @@ TOP NAVIGATION BAR
 .width-calc1part-of4{
     width: calc((100% / 4 ) * 1);
 }
+.align-left{
+    justify-content: start;
+}
+.align-right{
+    justify-content: end;
+}
 
 /* 
 ****************************************
